# MULT-25-607-ML-for-RF-Sprectrum-sensing

./: .gitignore  README.md  psd.npy  setup_mlrf.sh
Documentation/: Readme.md
Status Reports/: Status Report Spring Week 04.md  Status Report Spring Week 05.md  (+3 more)
src/backend/: README.md  package.json  pyproject.toml  serve.py  test_read.py
src/backend/MLRF/: sources.py
src/backend/app/: server.js
src/backend/app/configs/: settings.py
src/backend/mlrf/: __init__.py  classifier.py  server.py  sources.py
src/backend/models/: MLRF_1.5.joblid
src/model/: .env  MLRF_1.5.py  README.md  best_model.pth  convert.py  create_dataset.ipynb  lightgbm_model_20250508_154221.joblib  model.ipynb  model.pth  model_metadata_20250508_154221.json  plot.ipynb  pyproject.toml
src/model/MLRF/: MergeH5.py  Networks.py  SplitH5.py  classifier.py  data_loader.py  datatools.py  feature_extraction.py  feature_extraction_chunks.py  iq_split_save.py  model_trainer.py  output_generator.py  plot_psd.ipynb  preprocessing.py  split_move.fish  split_psd.py  train_test_split.py  utils.py
src/model/MLRF/model_iterations/: iteration_01_11_2025.ipynb
src/model/MLRF/model_iterations/01_11_2025/: iteration_01_11_2025.ipynb
src/model/MLRF/model_iterations/01_15_2025/: iteration_01_15_2025.ipynb
src/model/MLRF/model_testing/: test_01_12_2025.ipynb
src/model/MLRF/model_testing/01_12_2025/: investigation_01_12_2025.ipynb
src/model/legacy/: model.ipynb  model.pth
src/model/model_iterations/: Untitled-1.py  best_model.pth  full_spectrum_classifier.pth  opensource_01_15_2025.ipynb  recorded_02_07_2025.ipynb  recorded_02_07_2025.pth  recorded_02_07_2025.py  rf_classifier.pth
src/model/testing/: test.py  testing_01_20_2025.ipynb
src/model/training/: MLRF_1.0.py  MLRF_1.1.pth  MLRF_1.1.py  MLRF_1.2.pth  MLRF_1.2.py  MLRF_1.3.pth  MLRF_1.3.py  MLRF_1.4.py  MLRF_1.5.py  MLRF_test.pth  MLRF_v1.0.pth  full_spectrum_classifier.pth  recorded_02_07_2025.py  test.py  usethis.joblib
src/model/training/1.4/: best_model_Random Forest_spectral_shape_20250419_165013.joblib  best_model_XGBoost_bandwidth_20250419_165101.joblib  model_1.4.joblib  rf_classifier_bandwidth_20250419_165101.joblib  rf_classifier_combined_20250419_165542.joblib  rf_classifier_spectral_shape_20250419_165013.joblib
(+29 files in other folders)
