[project]
name = "pythonsocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.13.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pyqt6>=6.8.1",
    "pyqtgraph>=0.13.7",
    "scipy>=1.15.2",
    "snakeviz>=2.2.2",
    "torch>=2.6.0",
    "websockets>=15.0",
]
