[project]
name = "MLRF"
version = "0.1.0"
description = "Machine Learning for RF backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.2",
    "websockets>=15.0",
    "h5py>=3.12.1",
    "lightgbm>=4.6.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0",
    "pybind11>=2.13.6",
    "requests>=2.32.3",
    "ruamel-yaml>=0.18.10",
    "setuptools>=78.1.1",
    "mako>=1.3.10",
]
