[project]
name = "ML-RF-Spectrum-Sensing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.12.1",
    "ipykernel",
    "ipywidgets",
    "pandas>=2.2.3",
    "plot>=0.6.5",
    "pyqt5>=5.15.11",
    "pyqt6>=6.7.1",
    "pyside2>=5.15.2.1",
    "pyside6>=6.8.2.1",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]
